bk_ida/gccida/g2/expand_builtin_prefetch
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_builtin_prefetch/src/builtins.c:1193:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v4; // rbp 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_builtin_prefetch/src/builtins.c:1205:21: error: expected expression
v4 = *( tree_node **)( v2 + 32); 
                    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_builtin_prefetch/src/builtins.c:1205:9: error: use of undeclared identifier 'tree_node'
v4 = *( tree_node **)( v2 + 32); 
        ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_builtin_prefetch/src/builtins.c:1221:30: error: use of undeclared identifier 'machine_mode'
v8 = expand_expr( v4, 0LL, ( machine_mode)( ( ( BYTE3( target_flags) & 2) != 0) + 4), EXPAND_NORMAL); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_builtin_prefetch/src/builtins.c:1246:73: error: use of undeclared identifier 'insn_data_0'
if ( !insn_data_0[1316].operand->predicate( v8, *( ( unsigned __int16 *)insn_data_0[1316].operand + 8)) ) 
                                                                        ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_builtin_prefetch/src/builtins.c:1246:7: error: use of undeclared identifier 'insn_data_0'; did you mean 'insn_data'?
if ( !insn_data_0[1316].operand->predicate( v8, *( ( unsigned __int16 *)insn_data_0[1316].operand + 8)) ) 
      ^~~~~~~~~~~
      insn_data
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_builtin_prefetch/src/recog.h:249:31: note: 'insn_data' declared here
extern const struct insn_data insn_data[];
                              ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_builtin_prefetch/src/builtins.c:1247:19: error: use of undeclared identifier 'machine_mode'
v8 = force_reg( ( machine_mode)( ( ( BYTE3( target_flags) & 2) != 0) + 4), v8); 
                  ^
7 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_builtin_prefetch/src/obj/builtins.o] Error 1
